# INF402_Projet

./: .gitignore  INF402_Projet.opam  INSTALL.txt  LISEZMOI.txt  dune-project
examples/: 1x1.sdk  4x4.sdk  9x9.sdk  unsolvable_4x4.sdk
lib/: DIMACS.ml  DIMACS.mli  INF402_Projet.ml  dune  logic.ml  logic.mli  rules.ml  rules.mli  sudoku.ml  sudoku.mli  var_id.ml  var_id.mli
